--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^11.11.1",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
